# signal2image-modules-in-deep-neural-networks-for-eeg-classification

./: .dockerignore  .gitignore  CITATION  CITATION.bib  Dockerfile  Dockerfile.app  LICENSE  LeNet_2D.py  Makefile  Makefile.browser  Makefile.html  Makefile.server  README  README.md  app-requirements.txt  app.py  dataset.py  flake.nix  formatter.nix  index.html  main.py  models_1D.py  ms.bib  ms.tex  read_results.py  requirements.txt  script.js  signal2image_modules.py  style.css  utilities.py  visualize_paper.py
.github/: dependabot.yml
.github/workflows/: docs.yml  reproducible-build.yml  test-draft-version-document-reproducibility.yml  test-fast-draft-reproducibility.yml  test-local-reproducibility.yml  test-reproducible-build-and-upload-release.yml  test-reproducible-build.yml  tests.yml  workflow.yml
checks/default/: default.nix
checks/python/: default.nix
docs/: .gitignore  Dockerfile  Makefile  flake.nix  index.html  index.js  main.py  package.json  requirements.txt  script.js  style.css  styles.css
docs/prm/: model.onnx
latex/: .gitignore  Dockerfile  Makefile  flake.nix  ms.bib  ms.tex
latex/python/: .gitignore  Dockerfile  Makefile  flake.nix  main.py  pyproject.toml
latex/python/assets/: eeg-classification-example-data.txt
paper/: ms.tex
python/: .dockerignore  Dockerfile  Makefile  hubconf.py  main.py  pyproject.toml  requirements.txt
wbml/: eeg-classification.json
