[project]
name = "UNKNOWN"
version = "0.0.0"
dependencies = [
	"Jinja2==3.1.2",
	"matplotlib==3.6.2",
	"onnx-tf==1.10.0",
	"pandas==1.5.2",
	"scipy==1.9.3",
	"tensorflow-probability==0.19.0",
	"tensorflowjs==4.1.0",
]

[project.optional-dependencies]
dev = ["ruff==0.0.191"]

[tool.ruff]
select = ["A", "C", "E", "ERA", "F", "I", "ICN", "N", "PD", "RET", "SIM", "T20", "TID", "UP", "W"]
ignore = ["C901", "E501", "PD013"]
fix = true
