[project]
name = "UNKNOWN"
version = "0.0.0"
dependencies = [
	"Jinja2==3.1.2",
	"matplotlib==3.7.0",
	"onnx-tf==1.10.0",
	"pandas==1.5.3",
	"scipy==1.10.1",
	"tensorflow-probability==0.19.0",
	"tensorflowjs==4.2.0",
]

[project.optional-dependencies]
dev = [
	"mypy==1.1.1",
	"ruff==0.0.257",
]

[tool.mypy]
cache_dir = "bin/check"
ignore_missing_imports = true
install_types = true
non_interactive = true
strict = true

[tool.ruff]
cache-dir = "bin/check/ruff"
fix = true
ignore = ["E501", "S101"]
select = ["A", "ANN", "ARG", "B", "BLE", "C", "C40", "C90", "COM", "DJ", "DTZ", "E", "EM", "ERA", "EXE", "F", "FBT", "G", "I", "ICN", "INP", "ISC", "N", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "Q", "RET", "RSE", "RUF", "S", "SLF", "SIM", "T10", "T20", "TCH", "TID", "TRY", "UP", "YTT", "W"]
