[project]
dependencies = [
  "matplotlib==3.8.4",
  "onnx==1.16.0",
  "onnxscript==0.1.0.dev20240501",
  "pandas==2.2.2",
  "scipy==1.13.0"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "coverage==7.5.0",
  "djlint==1.34.1",
  "mypy==1.10.0",
  "ruff==0.4.2",
  "ssort==0.13.0",
  "toml-sort==0.23.1"
]
