[project]
dependencies = [
  "matplotlib==3.9.0",
  "onnx==1.16.1",
  "onnxscript==0.1.0.dev20240626",
  "pandas==2.2.2",
  "scipy==1.14.0"
]
name = "UNKNOWN"
version = "0.0.0"

[project.optional-dependencies]
dev = [
  "check-python-script@https://api.github.com/repos/pbizopoulos/check-python-script/tarball/a1c91a2#subdirectory=python",
  "coverage==7.5.4",
  "djlint==1.34.1",
  "mypy==1.10.1",
  "ruff==0.4.10",
  "toml-sort==0.23.1"
]
